# msfs2024-vfrnav-efb

./: .clang-format  .clang-tidy  .env.development  .eslintrc  .gitattributes  .gitignore  .gitmodules  .npmrc  CMakeLists.txt  README.md  build.js  build.ts  environment.d.ts  eslint.config.mjs  eslint.config.ts  logs.json  msfs2024-vfrnav-efb.code-workspace  msfs2024-vfrnavProject.xml  package.json  sonar-project.properties  tsconfig.json  vcpkg.json  vite.config.ts
common/: CMakeLists.txt
common/include/: Version.h
common/include/Registry/: AlxHome.h  Install.h  Registry.h  Run.h  Settings.h
common/include/Utils/: FindMSFS.h  LaunchMode.h
common/src/: FindMSFS.cpp  LaunchMode.cpp
common/ts/: Popup.tsx  env.d.ts  tsconfig.json
installer/: CMakeLists.txt  Resources.h  main.cpp  main.h  main.rc  probe.cmake
installer/Bindings/: abort.cpp  defaultInstallPath.cpp  exists.cpp  findCommunity.cpp  log.cpp  openFile.cpp  openFolder.cpp  parentExists.cpp  validate.cpp
installer/Wrapper/: CMakeLists.txt  Resources.h  main.cpp  main.rc
installer/ts/: CMakeLists.txt  build.ts  eslint.config.mjs  index.html  package.json  tailwind.config.ts  tsconfig.base.json  tsconfig.build.json  tsconfig.json
installer/ts/app/: env.d.ts  index.d.ts  main.tsx  tsconfig.json
installer/ts/app/App/: App.tsx  Body.tsx  Popup.tsx
server/: AppResources.h  Base64Utils.cpp  Base64Utils.h  CMakeLists.txt  Exceptions.h  HttpRequest.cpp  Resources.h  main.cpp  main.h  main.rc
server/ATC/: ATCHandler.cpp  ATCHandler.h  Aircraft.cpp  Aircraft.h  Frequencies.h  IAHandler.cpp  IAHandler.h  PdfExtract.h  SIAExtractor.cpp  SIAExtractor.h  SiaPdfFetch.cpp
server/ATC/Objects/: Aircraft.cpp  Aircraft.h  Aircraft.inl  CircuitPattern.cpp  CircuitPattern.h  Coords.h  Matrice.h  TrafficPattern.cpp  TrafficPattern.h  Waypoint.cpp  Waypoint.h
server/ATC/Utilities/: PdfExtract.cpp  SIAExtractor.cpp  SIAExtractor.h  SiaPdfFetch.cpp  SiaPdfFetch.h
server/Main/: MPromise.h  Main.cpp  Resolvers.cpp  Server.cpp
server/Server/: Resolvers.cpp  Resolvers.inl  Server.cpp  Server.h
server/Server/WebSockets/: EFBWebSocket.cpp  WebSocket.cpp  WebWebSocket.cpp
server/Server/WebSockets/Messages/: ATCId.h  Date.h  Deviation.h  Facilities.h  Files.h  Fuel.h  GetMetar.h  Messages.cpp  Messages.h  NavData.h  Pdfs.h  PlanePos.h  Records.h  Settings.h
server/SimConnect/: DataType.h  Facilities.cpp  Facilities.h  GroundInfo.h  MSFS.cpp  MSFS.h  Promise.h  Request.h  ServerPort.h  SimConnect.cpp  SimConnect.h  SimConnect.inl  SimConnectInterface.cpp  SimConnectInterface.inl  StaticCast.cpp  StaticCast.inl  TrafficInfo.h
server/SimConnect/Data/: Break.h  Coords.h  DataType.h  Flaps.h  GearDown.h  GroundInfo.h  ManualControl.h  ServerPort.h  SimRate.h  TrafficInfo.h  TrafficStaticInfo.h  Waypoint.cpp  Waypoint.h
server/SimConnect/FacilityData/: AirportFacility.cpp  AirportFacility.h  FacilityDataType.h  FacilityDataType.inl  Waypoint.h
server/SimConnect/Utils/: StaticCast.cpp  StaticCast.inl
server/Window/template/: Bindings.inl  Window.cpp  Window.h  Window.inl
server/Window/template/Bindings/: Files.inl  Message.inl  Settings.inl  SimConnect.inl  Taskbar.inl  abort.inl  exists.inl  log.cpp  log.inl  openFile.cpp  openFile.inl  openFolder.inl  parentExists.inl
server/ts/: CMakeLists.txt  build.ts  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.base.json  tsconfig.build.json  tsconfig.json
server/ts/app/: env.d.ts  index.html  main.tsx  tsconfig.json
server/ts/app/App/: App.tsx  Body.tsx  Popup.tsx
server/ts/common/: env.d.ts  tsconfig.json
server/ts/common/Hooks/: Server.tsx  index.d.ts
server/ts/taskbar/: env.d.ts  index.html  main.tsx  tsconfig.json
server/ts/taskbar/App/: App.tsx
server/ts/taskbar_tooltip/: env.d.ts  global.css  index.html  main.tsx  tsconfig.json
server/ts/taskbar_tooltip/App/: App.tsx
vfrnav_efb/: .env.development  .env.production  CMakeLists.txt  build.ts  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.base.json  tsconfig.build.json  tsconfig.json
vfrnav_efb/EFB/: CMakeLists.txt  build.ts  msfs2024-vfrnavProject.xml  package.json  release_notes.json  tsconfig.EFB.json  tsconfig.build.json  tsconfig.json
vfrnav_efb/EFB/PackageDefinitions/: alexhome-msfs2024-vfrnav.xml
vfrnav_efb/EFB/src/: App.tsx  FacilitiesManager.tsx  Manager.tsx  RecordManager.tsx  WasmComm.tsx  index.d.ts  main.tsx
vfrnav_efb/EFB/src/Components/: MainPage.tsx  Websock.ts
vfrnav_efb/app/: CMakeLists.txt  build.ts  index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.build.json  tsconfig.json
vfrnav_efb/app/src/: Manager.tsx  env.d.ts  global.css  index.d.ts  main.tsx  ol.css  setup.tsx
vfrnav_efb/app/src/Ol/: OlMap.tsx
vfrnav_efb/app/src/Ol/layers/: AZBALayer.tsx  AZBAPopup.tsx  AirportPopup.tsx  AirportsLayer.tsx  OlBingLayer.tsx  OlLayer.tsx  OlMVT.tsx  OlOSMLayer.tsx  OlRoute.tsx  OlWMSLayer.tsx  OlWMTSLayer.tsx  OpenAip.tsx  PlaneLayer.tsx  RecordsLayer.tsx
vfrnav_efb/app/src/Settings/: SIA.tsx  SIAAZBA.tsx  Settings.tsx  SettingsProvider.tsx  SiaPDF.tsx
vfrnav_efb/app/src/Utils/: ATCId.tsx  AirplaneRecord.json  Facilities.json  Pdf.tsx  SimDate.tsx  record-0.json  record-2.json  useServer.tsx
vfrnav_efb/app/src/app/: App.tsx  Menu.tsx  page.tsx
vfrnav_efb/app/src/pages/Charts/: ChartsPage.tsx  Popup.tsx
vfrnav_efb/app/src/pages/Credits/: CreditsPage.tsx
vfrnav_efb/app/src/pages/Map/: MapContext.tsx  MapPage.tsx  RecordViewPoint.tsx  ServerState.tsx  Toolbar.tsx
vfrnav_efb/app/src/polyfills/: pointer-events.js
vfrnav_efb/comm_wasm/: CMakeLists.txt  README.md
vfrnav_efb/comm_wasm/src/: Blob.cpp  CommWasm.cpp  CommWasm.h  Records.cpp
vfrnav_efb/shared/: ATCId.tsx  Date.tsx  Deviation.tsx  Facilities.tsx  Files.tsx  Fuel.tsx  HelloWorld.tsx  MessageHandler.tsx  NavData.tsx  Pdfs.tsx  PlanPos.tsx  Server.tsx  Settings.tsx  Types.tsx  environment.d.ts  tsconfig.json
window/: CMakeLists.txt
window/include/window/: FileDialog.h
window/window/windows/: FileDialog.cpp
(+168 files in other folders)
